# lds-metadata-updater

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
metadata_updater/: INSTALL.md  __init__.py  check_duplicates.py  config_tempate.yaml  log.py  metadata_updater.py
tests/: test_metadata_updater.py  test_metadata_updater_integration.py  tests.py
tests/data/: config.yaml
